--- a/index.html
+++ b/index.html
@@ -128,7 +128,6 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<h2>Hello!</h2>
-					<h3>November 10th, 2022 Harihara, Davanagere</h3>
 					<p>We invite you to celebrate our wedding</p>
 				</div>
 			</div>
@@ -139,7 +138,7 @@
 					</div>
 					<div class="desc-groom">
 						<h3>Ajay Kumar</h3>
-						<p>He once thought there was no woman who could please him</p>
+						<p><b>He once thought there was no woman who could please him</b></p>
 					</div>
 				</div>
 				<p class="heart text-center"><i class="icon-heart2"></i></p>
@@ -149,11 +148,11 @@
 					</div>
 					<div class="desc-bride">
 						<h3>Aishwarya</h3>
-						<p>She once thought there was no man who was good enough for her</p>
+						<p><b>She once thought there was no man who was good enough for her</b></p>
 					</div>
 				</div>
 				<div>
-					<p class="text-center">Fate may have brought us together, but it's our hearts that wants us to stay together</p>
+					<p class="text-center"><b>Fate may have brought us together, but it's our hearts that wants us to stay together</b></p>
 				</div>
 			</div>
 		</div>
@@ -185,6 +184,7 @@
 										<span>November, 2022</span>
 									</div>
 									<p>Siddeshwara Palace, Shimogga road, Harihara</p>
+									<a href="https://www.google.com/maps/place/Sri+Siddeshwara+Palace,+A+Luxury+Banquet+Hall/@14.4955859,75.8022692,17z/data=!3m1!4b1!4m5!3m4!1s0x3bba5bbb967eef83:0x7eb0079251540cbe!8m2!3d14.4955859!4d75.8044579">MAP</a>
 								</div>
 							</div>
 							<div class="col-md-4 col-sm-4 text-center">
@@ -200,6 +200,7 @@
 										<span>November, 2022</span>
 									</div>
 									<p>Siddeshwara Palace, Shimogga road, Harihara</p>
+									<a href="https://www.google.com/maps/place/Sri+Siddeshwara+Palace,+A+Luxury+Banquet+Hall/@14.4955859,75.8022692,17z/data=!3m1!4b1!4m5!3m4!1s0x3bba5bbb967eef83:0x7eb0079251540cbe!8m2!3d14.4955859!4d75.8044579">MAP</a>
 								</div>
 							</div>
 							<div class="col-md-4 col-sm-4 text-center">
@@ -215,6 +216,7 @@
 										<span>November, 2022</span>
 									</div>
 									<p>GG Samudaya Bhavana, Stadium road, Chitradurga</p>
+									<a href="https://www.google.com/maps/place/G.G+Samudaya+Bhavana/@14.2161841,76.4061449,17z/data=!3m1!4b1!4m5!3m4!1s0x3bba7454dd047b35:0x2b2cbe247c18c13!8m2!3d14.2161841!4d76.4083336">MAP</a>
 								</div>
 							</div>
 						</div>
