--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Ajay Weds Aishu</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta property="og:site_name" content="Wedding Invitation">
+	<meta property="og:title" content="Ajay Weds Aishu" />
+	<meta property="og:image" itemprop="image" content="images/gallery-4.jpg">
 	<meta name="description" content="Ajay Weds Aishu" />
 	<meta name="keywords" content="Ajay Weds Aishu" />
 	<meta name="author" content="Ajay" />
@@ -183,7 +186,7 @@
 										<span>Thursday 10</span>
 										<span>November, 2022</span>
 									</div>
-									<p>Siddeshwara Palace, Shimogga road, Harihara</p>
+									<p><b>Siddeshwara Palace, Shimogga road, Harihara</b></p>
 									<a href="https://www.google.com/maps/place/Sri+Siddeshwara+Palace,+A+Luxury+Banquet+Hall/@14.4955859,75.8022692,17z/data=!3m1!4b1!4m5!3m4!1s0x3bba5bbb967eef83:0x7eb0079251540cbe!8m2!3d14.4955859!4d75.8044579">MAP</a>
 								</div>
 							</div>
@@ -199,7 +202,7 @@
 										<span>Friday 11</span>
 										<span>November, 2022</span>
 									</div>
-									<p>Siddeshwara Palace, Shimogga road, Harihara</p>
+									<p><b>Siddeshwara Palace, Shimogga road, Harihara</b></p>
 									<a href="https://www.google.com/maps/place/Sri+Siddeshwara+Palace,+A+Luxury+Banquet+Hall/@14.4955859,75.8022692,17z/data=!3m1!4b1!4m5!3m4!1s0x3bba5bbb967eef83:0x7eb0079251540cbe!8m2!3d14.4955859!4d75.8044579">MAP</a>
 								</div>
 							</div>
@@ -215,7 +218,7 @@
 										<span>Saturday 12</span>
 										<span>November, 2022</span>
 									</div>
-									<p>GG Samudaya Bhavana, Stadium road, Chitradurga</p>
+									<p><b>GG Samudaya Bhavana, Stadium road, Chitradurga</b></p>
 									<a href="https://www.google.com/maps/place/G.G+Samudaya+Bhavana/@14.2161841,76.4061449,17z/data=!3m1!4b1!4m5!3m4!1s0x3bba7454dd047b35:0x2b2cbe247c18c13!8m2!3d14.2161841!4d76.4083336">MAP</a>
 								</div>
 							</div>
