--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta property="og:site_name" content="Wedding Invitation">
 	<meta property="og:title" content="Ajay Weds Aishu" />
 	<meta property="og:image" itemprop="image" content="images/gallery-4.jpg">
-	<meta name="description" content="Ajay Weds Aishu" />
+	<meta property="og:description" content="Ajay Weds Aishu" />
 	<meta name="keywords" content="Ajay Weds Aishu" />
 	<meta name="author" content="Ajay" />
 
