--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Ajay Weds Aishu</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta property="og:site_name" content="Wedding Invitation">
-	<meta property="og:title" content="Ajay Weds Aishu" />
+	<meta property="og:title" content="Wedding Invitation" />
 	<meta property="og:image" itemprop="image" content="images/gallery-4.jpg">
 	<meta property="og:description" content="Ajay Weds Aishu" />
 	<meta name="keywords" content="Ajay Weds Aishu" />
