--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 	<title>Ajay Weds Aishu</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta property="og:title" content="Wedding Invitation" />
-	<meta property="og:image" itemprop="image" content="images/gallery-4.jpg">
-	<meta property="og:description" content="Ajay Weds Aishu" />
-	<meta name="keywords" content="Ajay Weds Aishu" />
+	<meta property="og:image" itemprop="image" content="https://www.ajaywedsaishu.in/images/gallery-4.jpg">
 	<meta name="author" content="Ajay" />
 
   <!-- 
