--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Ajay Weds Aishu</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta property="og:title" content="Wedding Invitation" />
-	<meta property="og:image" itemprop="image" content="https://www.ajaywedsaishu.in/images/3.jpg">
 	<meta name="author" content="Ajay" />
 
   <!-- 
@@ -25,13 +23,11 @@
 
 	//////////////////////////////////////////////////////
 	 -->
-
   	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
+	<meta property="og:title" content="Wedding Invitation"/>
+	<meta property="og:image" content="https://www.ajaywedsaishu.in/images/3.jpg"/>
 	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<meta property="og:description" content="Ajay Weds Aishu"/>
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
