--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
 										<span>Thursday 10</span>
 										<span>November, 2022</span>
 									</div>
-									<p><b>Siddeshwara Palace, Shimogga road, Harihara</b></p>
-									<a href="https://www.google.com/maps/place/Sri+Siddeshwara+Palace,+A+Luxury+Banquet+Hall/@14.4955859,75.8022692,17z/data=!3m1!4b1!4m5!3m4!1s0x3bba5bbb967eef83:0x7eb0079251540cbe!8m2!3d14.4955859!4d75.8044579">MAP</a>
+									<p><b>SIDDESHWARA PALACE<br/>Shimogga road, Harihara</b></p>
+									<a href="https://www.google.com/maps/place/Sri+Siddeshwara+Palace,+A+Luxury+Banquet+Hall/@14.4955859,75.8022692,17z/data=!3m1!4b1!4m5!3m4!1s0x3bba5bbb967eef83:0x7eb0079251540cbe!8m2!3d14.4955859!4d75.8044579"><b>MAP</b></a>
 								</div>
 							</div>
 							<div class="col-md-4 col-sm-4 text-center">
@@ -194,8 +194,8 @@
 										<span>Friday 11</span>
 										<span>November, 2022</span>
 									</div>
-									<p><b>Siddeshwara Palace, Shimogga road, Harihara</b></p>
-									<a href="https://www.google.com/maps/place/Sri+Siddeshwara+Palace,+A+Luxury+Banquet+Hall/@14.4955859,75.8022692,17z/data=!3m1!4b1!4m5!3m4!1s0x3bba5bbb967eef83:0x7eb0079251540cbe!8m2!3d14.4955859!4d75.8044579">MAP</a>
+									<p><b>SIDDESHWARA PALACE<br/>Shimogga road, Harihara</b></p>
+									<a href="https://www.google.com/maps/place/Sri+Siddeshwara+Palace,+A+Luxury+Banquet+Hall/@14.4955859,75.8022692,17z/data=!3m1!4b1!4m5!3m4!1s0x3bba5bbb967eef83:0x7eb0079251540cbe!8m2!3d14.4955859!4d75.8044579"><b>MAP</b></a>
 								</div>
 							</div>
 							<div class="col-md-4 col-sm-4 text-center">
@@ -210,8 +210,8 @@
 										<span>Saturday 12</span>
 										<span>November, 2022</span>
 									</div>
-									<p><b>GG Samudaya Bhavana, Stadium road, Chitradurga</b></p>
-									<a href="https://www.google.com/maps/place/G.G+Samudaya+Bhavana/@14.2161841,76.4061449,17z/data=!3m1!4b1!4m5!3m4!1s0x3bba7454dd047b35:0x2b2cbe247c18c13!8m2!3d14.2161841!4d76.4083336">MAP</a>
+									<p><b>GG SAMUDAYA BHAVANA <br/> Stadium road, Chitradurga</b></p>
+									<a href="https://www.google.com/maps/place/G.G+Samudaya+Bhavana/@14.2161841,76.4061449,17z/data=!3m1!4b1!4m5!3m4!1s0x3bba7454dd047b35:0x2b2cbe247c18c13!8m2!3d14.2161841!4d76.4083336"><b>MAP</b></a>
 								</div>
 							</div>
 						</div>
